# MagicPodsLinux

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.magicpodscore  README.md  build-portable.sh
src/app/cpp/: Backend.cpp  Backend.h  BackendManager.cpp  BackendManager.h  DeckyManager.cpp  DeckyManager.h  DesktopManager.cpp  DesktopManager.h  TrayIcon.cpp  TrayIcon.h  TrayIconManager.cpp  TrayIconManager.h  main.cpp
src/app/i18n/: locale_en.ts
src/app/qml/: Main.qml  PopupAnimation.qml  Units.qml
src/app/qml/components/: Animations.qml  BatteryPopup.qml  BatteryVertical.qml  FormRow.qml  Heading.qml  HelpMessage.qml  InlineMessage.qml  Label.qml  Separator.qml
src/app/qml/pages/: AboutPage.qml  BatteryPage.qml  ColorSample.qml  HeadphonesPage.qml  SettingsPage.qml
